Fix position fixed on iOS

--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -6,9 +6,11 @@
   display: flex;
   height: @headerHeight;
   justify-content: space-between;
-  position: fixed;
   width: 100%;
   background-color: #0f2035;
+  position: relative;
+  box-shadow: 0 3px 5px 0 rgba(15, 31, 52, 0.4);
+  z-index: 1;
   #hamberger-menu {
     background-image: url('/assets/hamberger-menu.png');
     background-position: center center;
