--- a/src/components/RepoList/style.less
+++ b/src/components/RepoList/style.less
@@ -1,8 +1,5 @@
-@headerHeight: 60px;
-
 #repo-list-page {
   padding: 15px;
-  margin-top: @headerHeight;
   padding-top: 25px;
 
   #search-input input {
